feat: padronização e integração da granos
